--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
 # Auto detect text files and perform LF normalization
 * text=auto
-*.csharp linguist-detectable=true
+*.python linguist-detectable=true
 *.JavaScript linguist-detectable=false
